# syntia

./: Cargo.toml  README.md
examples/: arithmetic.rs
src/: lib.rs  render.rs  source.rs  span.rs  spanned.rs  token.rs
src/lexer/: cursor.rs  error.rs  lex.rs  mod.rs
src/parser/: error.rs  mod.rs  parse.rs  stream.rs
tests/: integration.rs
